Prelim: Implement a bunch more for the MariaDB wrapper

--- a/Queryable-Storage-Service/Queryable-Storage-Service.csproj
+++ b/Queryable-Storage-Service/Queryable-Storage-Service.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Database\IDatabaseConnection.cs" />
     <Compile Include="Database\DatabaseResults.cs" />
     <Compile Include="Database\Wrappers\MariaDb\MariaDbConnection.cs" />
+    <Compile Include="Database\Wrappers\MariaDb\MysqlField.cs" />
     <Compile Include="FileSystem\FileSystemMonitor.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
