Prelim: Add passthru for service so that logging can take place

--- a/Queryable-Storage-Service/Queryable-Storage-Service.csproj
+++ b/Queryable-Storage-Service/Queryable-Storage-Service.csproj
@@ -95,5 +95,8 @@
   <ItemGroup>
     <None Include="Resources\DefaultConfigurations.json" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DefaultSchema.json" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
